<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical">


    <EditText
        android:id="@+id/edOldPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/change_pass_margin_top"
        android:hint="@string/old_pass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edNewPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/change_pass_margin_top"
        android:hint="@string/new_pass"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/edConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/change_pass_margin_top"
        android:hint="@string/confirm_pass"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/change_pass_margin_top"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</LinearLayout>
