<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/slider_intro_01_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/welcome_mg"
        android:layout_marginRight="@dimen/welcome_mg"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:src="@drawable/intro_ic_01" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/wc_1_intro"
            android:textColor="@color/white"
            android:textSize="27sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/wc_1_title"
            android:textColor="@color/white"
            android:textSize="@dimen/font_actionbar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/wc_1_content"
            android:textColor="@color/white"
            android:textSize="@dimen/font_actionbar" />
    </LinearLayout>
    <TextView
        android:id="@+id/tvLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/wc_6_text3"
        android:textColor="@color/white"
        android:textSize="@dimen/font_actionbar" />

</RelativeLayout>