<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:text="@string/edit"
            android:textSize="@dimen/font_actionbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/tvEnable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Enable"
                android:textSize="@dimen/font_actionbar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="/"
                android:textSize="@dimen/font_actionbar" />

            <TextView
                android:id="@+id/tvDisable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Disable"
                android:textSize="@dimen/font_actionbar" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
